fixed the overflow issue of the header tezt

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,6 @@ h3{
 
 .instructions{
     font-size: 28px;
-    overflow: hidden;
 
 }
 
@@ -76,6 +75,7 @@ h3{
     margin-bottom: 26px;
     line-height: 1.5;
     letter-spacing: 3px;
+    padding-top: 2rem;
     
 }
 
